--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,10 @@ html, body {
     width: 100%;
     height: 100%;
     overflow-x: hidden;
+    display: flex;
+    direction: column;
 }
+
 header{
     height: 80px;
     width: 100%;
@@ -45,6 +48,9 @@ a:hover{
     background-color: rgba(200, 200, 200, 0.1);
 }
 
-.relleno {
-    height: 150vh;
+.main-container{
+    margin-top: 80px;
+    background-color: red;
+    height: 200vh;
+    width: 20px;
 }
